[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://objects/DiceGround.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Game" type="Control" parent="." groups=["game"]]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MenuButton" type="Button" parent="Game"]
margin_left = 409.0
margin_top = 5.0
margin_right = 509.0
margin_bottom = 40.0
text = "Menu"

[node name="Roll" type="Button" parent="Game"]
margin_left = 5.0
margin_top = 560.0
margin_right = 105.0
margin_bottom = 595.0
text = "Roll (x3)"

[node name="PlayersBox" type="GridContainer" parent="Game"]
margin_left = 5.0
margin_top = 30.0
margin_right = 305.0
margin_bottom = 560.0

[node name="EnemyBox" type="GridContainer" parent="Game"]
margin_left = 718.0
margin_top = 30.0
margin_right = 1018.0
margin_bottom = 560.0

[node name="Done" type="Button" parent="Game"]
anchor_left = 0.347
anchor_top = 0.399
anchor_right = 0.347
anchor_bottom = 0.399
margin_left = 568.672
margin_top = 325.6
margin_right = 668.672
margin_bottom = 360.6
text = "Done"

[node name="DiceTable" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Game/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Game/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="Game/Done" to="." method="_on_Done_pressed"]
